# asiopq

./: CMakeLists.txt  README.md
lib.asiopq/: CMakeLists.txt  asiopq.cpp
lib.asiopq.tests/: CMakeLists.txt  asiopq_tests.cpp
lib.asiopq/asiopq/: asiopq.hpp  async_prepare.hpp  async_prepare_params.hpp  async_query.hpp  async_query_params.hpp  async_query_prepared.hpp  auto_prepared_query.hpp  connection.hpp  connection_pool.hpp  dump_result.hpp  error.hpp  params.hpp  reconnection_pool.hpp  text_params.hpp  utility.hpp
lib.asiopq/asiopq/layer1/: connection.hpp  ignore_result.hpp
lib.asiopq/asiopq/layer1/detail/: async_wait_socket.hpp  dup_socket.hpp  operations.hpp
lib.asiopq/asiopq/layer2/: async_prepare.hpp  async_prepare_params.hpp  async_query.hpp  async_query_params.hpp  async_query_prepared.hpp  null_params.hpp  params.hpp
lib.asiopq/asiopq/layer3/: auto_prepared_query.hpp  cloned_params.hpp  connection_pool.hpp  dump_result.hpp  text_params.hpp
lib.asiopq/asiopq/layer4/: connection_pool.hpp  reconnection_pool.hpp
